Co-authored-by: Guilherme N.P <GuilhermeNPdev@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="stylesheet" href="style.css">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> my site </title>
 
 <body>
-<header>
-    <nav> 
-       <a class="logo" href="/"> I tikk</a>
-        <ul class="nav-list">
-            <li><a href="/">inicio</a></li>
-            <li><a href="/">Doações</a></li>
-            <li><a href="/">Gatos</a></li>
-            <li><a href="/">Contatos</a></li>
-        </ul>
-    </nav>
-</header>  
 
-<main></main>
+    <div>
+        <header>
+            <nav class="navbar-background">
+
+                <ul class="nav-list">
+                    <li><a href="#inicio">inicio</a></li>
+                    <li><a href="#doações">Doações</a></li>
+                    <li><a href="">Contatos</a></li>
+                </ul>
+            </nav>
+
+            <div class="rightNav">
+                <input  type="text" name="search" id="search">
+                <button class="btn btn-sm">search</button>
+            </div>
+        </header>
+    </div>
+    <main></main>
 
 
 </body>
